third_party/move/move-compiler-v2/tests/checking-lang-v2.4/cross_module_const_in_initializer_rejected.exp

Diagnostics:
error: cross-module constant `0x42::M::A` cannot be used in another constant's initializer
   ┌─ tests/checking-lang-v2.4/cross_module_const_in_initializer_rejected.move:12:27
   │
12 │     public const B: u64 = M::A + 1; // rejected
   │                           ^^^^
